<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RssReader</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about">about</string>
    <string name="menu_subcribe">subcribe</string>
    <string name="menu_theme">theme</string>
    <string name="menu_language">language</string>
    <string name="subscribe_search">Search</string>
    <string name="subscribe_search_hint">RSS address</string>
    <string name="search_progress_info">Searching...</string>
    <string name="multimode_action_title"> items selected</string>
    <string name="remove_dialog_title">Do you want to remove the items</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
</resources>